# robogame

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-pi.txt  requirements.txt
assets/models/: README.md
config/: gestures.yaml  robot.yaml
docs/: architecture.md  hardware-notes.md  learning-roadmap.md  linux-cheatsheet.md  python312-packages.md  vision-demo-guide.md
scripts/: README.md  robogame.service  robot_demo.py  run_robot.sh  setup_pi.sh  test_display.py  test_display_web.py  test_vision.py
src/robogame/: __init__.py  main.py
src/robogame/audio/: README.md  __init__.py  tts.py
src/robogame/display/: README.md  __init__.py  player.py  web_player.py
src/robogame/motion/: README.md
src/robogame/vision/: README.md  __init__.py  recognizer.py
tests/: conftest.py  test_display_player.py  test_robot_demo.py  test_tts.py
