[project]
name = "robogame"
version = "0.1.0"
description = "Human-robot interaction prototype for a Raspberry Pi soft robot"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9",
  "pyyaml>=6.0",
  "mediapipe>=0.10",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
pi = [
  "picamera2",
  "adafruit-circuitpython-pca9685",
  "adafruit-circuitpython-servokit",
]
ui = [
  "pygame>=2.5",
]
tts = [
  "piper-tts>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]